--- a/03/03.html
+++ b/03/03.html
@@ -22,7 +22,7 @@
         <div class="child-2">
             <ul class="innerchild-2">
                 
-                    <div class="notification-child">1 new notification</div>
+                    <button class="notification-child">1 new notification</button>
                 
                 <div class="notif">
                    <p class="circlechild"></p> 
